[package]
edition = {workspace = true}
name = "kabegame-cli"
version = {workspace = true}
default-run = "kabegame-cli"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
dirs = "5.0"
globset = "0.4"
include_dir = "0.7"
kabegame-core = {workspace = true, default-features = false}
regex = "1"
serde_json = {workspace = true}
tokio = {workspace = true}
zip = {workspace = true}

[features]
default = []

[[bin]]
name = "kabegame-cli"
path = "src/main.rs"
