[package]
build = "build.rs"
description = "Kabegame 共享后端核心（crawler/plugin/storage 等）"
edition = { workspace = true }
name = "kabegame-core"
version = { workspace = true }

[dependencies]
kabegame-i18n = { workspace = true }
pathql-rs = { workspace = true, features = ["json5", "validate"] }
include_dir = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
auto-launch = "0.5"
base64 = { workspace = true }
encoding_rs = "0.8"
dirs = "5.0"
chrono = "0.4"
futures-util = "0.3"
image = { workspace = true }
infer = "0.19"
lru = "0.12"
md5 = { workspace = true }
regex = "1.11"
rhai = { workspace = true }
rhai-chrono = { version = "0.1.1", default-features = false, features = ["sync"] }
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
scraper = "0.19"
select = "0.6"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
semver = "1"
sha2 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true }
walkdir = "2"
zip = { workspace = true }

# 桌面端使用 native-tls，移动端使用 rustls
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.11", features = [
  "blocking",
  "gzip",
  "json",
  "stream",
  "native-tls",
] }
# 桌面端删除原始文件时移入系统回收站（可恢复）；Android/iOS 不支持，单独处理。
trash = "5"
# 进程内 FFmpeg：视频预览压缩 + 维度读取（Android 走 Kotlin provider，无需）。
# 链接依赖构建环境 FFMPEG_PKG_CONFIG_PATH 指向 third/FFmpeg-build/install/lib/pkgconfig。
rsmpeg = { workspace = true }
# Phase 0（V8_RUNTIME）：嵌入式 V8 (deno_core/rusty_v8) 插件运行时，仅桌面接入。
# Android 保留 Rhai 后端；二进制增量与打包流程后续对照 cocs/build/PLATFORM_SHARED_LIBS.md 评估。
deno_core = "0.405"
deno_error = "0.7"
tokio-util = "0.7"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", features = [
  "blocking",
  "gzip",
  "json",
  "stream",
  "rustls-tls",
] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
which = { version = "6.0", optional = true }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 走 C libfuse(参考实现,挂载/卸载更成熟),并在构建期通过 `FUSE3_STATIC=1`
# 静态链接系统 libfuse3.a —— 不产生 libfuse3.so 运行时依赖(详见 Phase 6 计划点 7)。
# 运行时仍需 SUID `fusermount3`(apt `fuse3` 提供),deb 仍 depends fuse3。
fuser = { version = "0.16", features = ["libfuse"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
fuser = { version = "0.16", features = ["libfuse"], optional = true }

# Android 交叉编译时无系统 OpenSSL，使用 vendored 从源码编译
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
dokan = { version = "0.3.1", optional = true }
memmap2 = "0.9"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"] }
winreg = "0.52"
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["ipc-client"]
ipc-client = []
ipc-server = []
virtual-driver = ["dep:fuser", "dep:dokan"]
# Phase 6b: 6c 通过 SqlExecutor 接入后再启用 VD module
vd-legacy = []

[dev-dependencies]
tempfile = "3"
