[package]
build = "build.rs"
description = "Kabegame 共享后端核心（crawler/plugin/storage 等）"
edition = { workspace = true }
name = "kabegame-core"
version = { workspace = true }

[dependencies]
kabegame-i18n = { workspace = true }
pathql-rs = { workspace = true, features = ["json5", "validate"] }
include_dir = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
auto-launch = "0.5"
base64 = { workspace = true }
encoding_rs = "0.8"
dirs = "5.0"
chrono = "0.4"
futures-util = "0.3"
image = { workspace = true }
infer = "0.19"
lru = "0.12"
md5 = { workspace = true }
regex = "1.11"
rhai = { workspace = true }
rhai-chrono = { version = "0.1.1", default-features = false, features = ["sync"] }
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
scraper = "0.19"
select = "0.6"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
semver = "1"
sha2 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true }
walkdir = "2"
zip = { workspace = true }

# 桌面端使用 native-tls，移动端使用 rustls
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.11", features = [
  "blocking",
  "gzip",
  "json",
  "stream",
  "native-tls",
] }
# 桌面端删除原始文件时移入系统回收站（可恢复）；Android/iOS 不支持，单独处理。
trash = "5"
# 进程内 FFmpeg：视频预览压缩 + 维度读取（Android 走 Kotlin provider，无需）。
# 链接依赖构建环境 FFMPEG_PKG_CONFIG_PATH 指向 third/FFmpeg-build/install/lib/pkgconfig。
rsmpeg = { workspace = true }
# V8_RUNTIME：嵌入式 V8 (deno_core/rusty_v8) 插件运行时。
# 桌面 + Android 均接入（仅排除 iOS）。V8 启动快照已移除（跨架构不可移植，且非性能瓶颈），
# 运行期即时 init 扩展；网络全部走宿主 reqwest（op_kabegame_fetch / op_kabegame_to），
# Response/Headers 由 prelude.js 自实现，故不引入 deno_fetch / deno_net / deno_tls。
[target.'cfg(not(target_os = "ios"))'.dependencies]
deno_core = "0.405"
deno_error = "0.7"
deno_webidl = "0.252"
deno_web = "0.283"
deno_crypto = "0.266"
deno_permissions = "0.111"
deno_features = "0.49"
sys_traits = { version = "0.1", features = ["real", "libc", "winapi"] }
tokio-util = "0.7"

# build.rs 只在宿主（桌面）运行：用这几个 crate 枚举 deno 扩展的 lazy JS 源，
# 落盘为 residual 供运行期 loadExtScript 使用（无快照，故需把全部 lazy 源内联进二进制）。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.build-dependencies]
deno_core = "0.405"
deno_webidl = "0.252"
deno_web = "0.283"
deno_crypto = "0.266"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", features = [
  "blocking",
  "gzip",
  "json",
  "stream",
  "rustls-tls",
] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
which = { version = "6.0", optional = true }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 不链接 C libfuse:不开 `libfuse` feature,fuser 走纯 Rust 挂载路径
# (build.rs `fuser_mount_impl="pure-rust"`,仅 Linux 支持)。二进制启动时**没有任何**
# libfuse DT_NEEDED,挂载时才懒执行 SUID `fusermount3`(apt `fuse3` 提供)——
# 语义与 Windows delay-load dokan2.dll 一致:缺库不影响启动,仅虚拟盘功能不可用。
# 因此不需要 libfuse3.a/.so,构建期也不再需要 FUSE3_STATIC;deb 运行时仍 depends fuse3。
fuser = { version = "0.16", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
fuser = { version = "0.16", features = ["libfuse"], optional = true }

# Android 交叉编译时无系统 OpenSSL，使用 vendored 从源码编译
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
dokan = { version = "0.3.1", optional = true }
memmap2 = "0.9"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"] }
winreg = "0.52"
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["ipc-client"]
ipc-client = []
ipc-server = []
virtual-driver = ["dep:fuser", "dep:dokan"]
# Phase 6b: 6c 通过 SqlExecutor 接入后再启用 VD module
vd-legacy = []

[dev-dependencies]
tempfile = "3"
